--- a/www.hzshuangmei.com/templets/shuangmei/_header_jr_christmas.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_header_jr_christmas.htm
@@ -41,7 +41,7 @@
                     <li>
                         <h5>医学纹绣</h5>
                     </li>
-                    {dede:arclist typeid=20 orderby='id' row='3'}
+                    {dede:arclist typeid=20  channelid=18 orderby='id' row='3'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
@@ -57,7 +57,7 @@
                     <li>
                         <h5>眼部整形</h5>
                     </li>
-                    {dede:arclist typeid=15 orderby='id' row='3'}
+                    {dede:arclist typeid=15 channelid=18 orderby='id' row='3'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
@@ -71,7 +71,7 @@
                     <li>
                         <h5>鼻部整形</h5>
                     </li>
-                    {dede:arclist typeid=14 orderby='id' row='3'}
+                    {dede:arclist typeid=14 channelid=18 orderby='id' row='3'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
@@ -85,7 +85,7 @@
                     <li>
                         <h5>面部整形</h5>
                     </li>
-                    {dede:arclist typeid=16 orderby='id' row='3'}
+                    {dede:arclist typeid=16 channelid=18 orderby='id' row='3'}
                     <li class="star">
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
@@ -99,7 +99,7 @@
                     <li>
                         <h5>皮肤美容</h5>
                     </li>
-                    {dede:arclist typeid=21 orderby='id' row='3'}
+                    {dede:arclist typeid=21 channelid=18 orderby='id' row='3'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
@@ -113,7 +113,7 @@
                     <li>
                         <h5>玻尿酸</h5>
                     </li>
-                    {dede:arclist typeid=22 orderby='id' row='3'}
+                    {dede:arclist typeid=22  channelid=18 orderby='id' row='3'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
@@ -125,7 +125,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5>形体雕塑</h5> </li> {dede:arclist typeid=19 orderby='id' row='3'}
+                        <h5>形体雕塑</h5> </li> {dede:arclist typeid=19  channelid=18 orderby='id' row='3'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
@@ -147,7 +147,7 @@
                     <li>
                         <h5>整形美容专家</h5>
                     </li>
-                    {dede:arclist typeid=3 orderby='id' row='2'}
+                    {dede:arclist typeid=3  channelid=17 orderby='id' row='2'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:id function='getdoctorthumb(@me) /]" alt=""/>
@@ -160,7 +160,7 @@
                     <li>
                         <h5>激光美容专家</h5>
                     </li>
-                    {dede:arclist typeid=4 orderby='id' row='2'}
+                    {dede:arclist typeid=4  channelid=17 orderby='id' row='2'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:id function='getdoctorthumb(@me) /]" alt=""/>
@@ -174,7 +174,7 @@
                     <li>
                         <h5>美学设计</h5>
                     </li>
-                    {dede:arclist typeid=5 orderby='id' row='2'}
+                    {dede:arclist typeid=5  channelid=17 orderby='id' row='2'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:id function='getdoctorthumb(@me) /]" alt=""/>
@@ -188,7 +188,7 @@
                     <li>
                         <h5>特邀专家</h5>
                     </li>
-                    {dede:arclist typeid=2 flag="h" orderby='id' row='2'}
+                    {dede:arclist typeid=2  channelid=17 flag="h" orderby='id' row='2'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
