--- a/www.hzshuangmei.com/templets/shuangmei/article_aside.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/article_aside.htm
@@ -47,7 +47,7 @@
         </div>
         <div class="aside_jou center1">
             <div>
-                {dede:arclist typeid=10 orderby='pubdate' flag = 'a' row='5'}
+                {dede:arclist typeid=10  channelid=19 orderby='pubdate' flag = 'a' row='5'}
                 <a href="[field:arcurl/]" target="_blank" rel="noopener"><img src="[field:id function='getcaseimgafter(@me)'/]"></a>
                 {/dede:arclist}
             </div>
