--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -66,7 +66,7 @@
 
                 <div class="swiper-container news_tuijian">
                     <div class="swiper-wrapper">
-                        {dede:arclist typeid=1 orderby='id' row='3'}
+                        {dede:arclist typeid=1  channelid=20 orderby='id' row='3'}
                         <div class="swiper-slide">
                             <p class="recommend">
                                 <i></i>
