--- a/www.hzshuangmei.com/templets/shuangmei/index_jc_beian.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index_jc_beian.htm
@@ -199,7 +199,7 @@
 
                         <div class="swiper-container news_tuijian">
                             <div class="swiper-wrapper">
-                                {dede:arclist typeid=1 orderby='id' row='3'}
+                                {dede:arclist typeid=1 orderby='id' row='3' channelid=20}
                                 <div class="swiper-slide">
                                     <p class="recommend">
                                         <i></i>
