--- a/www.hzshuangmei.com/templets/shuangmei/_header_jc_beian.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_header_jc_beian.htm
@@ -26,43 +26,43 @@
             <div class="clearFix" id="project">
                 <ul>
                     <li>
-                        <h5>医学纹绣</h5> </li> {dede:arclist typeid=20 orderby='pubdate' row='3'}
+                        <h5>医学纹绣</h5> </li> {dede:arclist typeid=20  channelid=18 orderby='pubdate' row='3'}
                     <li> <a href="[field:arcurl/]">                            <img src="[field:picname function='replaceurl(@me)/]" alt=""/>                            <p><i></i><span>[field:title/]</span></p>                        </a> </li> {/dede:arclist}
                     <li class="n_button"> <a href="/projects">查看更多</a> </li>
                 </ul>
                 <ul>
                     <li>
-                        <h5>眼部整形</h5> </li> {dede:arclist typeid=15 orderby='pubdate' row='3'}
+                        <h5>眼部整形</h5> </li> {dede:arclist typeid=15 channelid=18 orderby='pubdate' row='3'}
                     <li> <a href="[field:arcurl/]">                            <img src="[field:picname function='replaceurl(@me)/]" alt=""/>                            <p><i></i><span>[field:title/]</span></p>                        </a> </li> {/dede:arclist}
                     <li class="n_button"> <a href="/projects">查看更多</a> </li>
                 </ul>
                 <ul>
                     <li>
-                        <h5>鼻部整形</h5> </li> {dede:arclist typeid=14 orderby='pubdate' row='3'}
+                        <h5>鼻部整形</h5> </li> {dede:arclist typeid=14 channelid=18 orderby='pubdate' row='3'}
                     <li> <a href="[field:arcurl/]">                            <img src="[field:picname function='replaceurl(@me)/]" alt=""/>                            <p><i></i><span>[field:title/]</span></p>                        </a> </li> {/dede:arclist}
                     <li class="n_button"> <a href="/projects">查看更多</a> </li>
                 </ul>
                 <ul>
                     <li>
-                        <h5>面部整形</h5> </li> {dede:arclist typeid=16 orderby='pubdate' row='3'}
+                        <h5>面部整形</h5> </li> {dede:arclist typeid=16 channelid=18 orderby='pubdate' row='3'}
                     <li class="star"> <a href="[field:arcurl/]">                            <img src="[field:picname function='replaceurl(@me)/]" alt=""/>                            <p><i></i><span>[field:title/]</span></p>                        </a> </li> {/dede:arclist}
                     <li class="n_button"> <a href="/projects">查看更多</a> </li>
                 </ul>
                 <ul>
                     <li>
-                        <h5>皮肤美容</h5> </li> {dede:arclist typeid=21 orderby='pubdate' row='3'}
+                        <h5>皮肤美容</h5> </li> {dede:arclist typeid=21 channelid=18 orderby='pubdate' row='3'}
                     <li> <a href="[field:arcurl/]">                            <img src="[field:picname function='replaceurl(@me)/]" alt=""/>                            <p><i></i><span>[field:title/]</span></p>                        </a> </li> {/dede:arclist}
                     <li class="n_button"> <a href="/projects">查看更多</a> </li>
                 </ul>
                 <ul>
                     <li>
-                        <h5>玻尿酸</h5> </li> {dede:arclist typeid=22 orderby='pubdate' row='3'}
+                        <h5>玻尿酸</h5> </li> {dede:arclist typeid=22 channelid=18  orderby='pubdate' row='3'}
                     <li> <a href="[field:arcurl/]">                            <img src="[field:picname function='replaceurl(@me)/]" alt=""/>                            <p><i></i><span>[field:title/]</span></p>                        </a> </li> {/dede:arclist}
                     <li class="n_button"> <a href="/projects">查看更多</a> </li>
                 </ul>
                 <ul>
                     <li>
-                        <h5>形体雕塑</h5> </li> {dede:arclist typeid=19 orderby='pubdate' row='3'}
+                        <h5>形体雕塑</h5> </li> {dede:arclist typeid=19 channelid=18 orderby='pubdate' row='3'}
                     <li> <a href="[field:arcurl/]">                            <img src="[field:picname function='replaceurl(@me)/]" alt=""/>                            <p><i></i><span>[field:title/]</span></p>                        </a> </li> {/dede:arclist}
                     <li class="n_button"> <a href="/projects">查看更多</a> </li>
                 </ul>
