--- a/xzh.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index.htm
@@ -21,8 +21,9 @@
     <!-- 无限加载 -->
     <script type="text/javascript">
     var loadConfig = {
-        url_api: '{dede:global.cfg_cmspath/}/plugin/list.php', //修正plus目录
-        typeid: { dede: field name = 'typeid' / }, //首页此处是typeid:0,
+        url_api: 'https://xzh.hzshuangmei.com/plugin/list.php', //修正plus目录
+        //typeid: { dede: field name = 'typeid' / }, //首页此处是typeid:0,
+        typeid: 76,
         page: 2,
         pagesize: 3,
         loading: 0,
