修改模板标题，修改测试
修改模板标题，修改测试

--- a/xzh.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index.htm
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
-    <title>海南红妆双美整形美容资讯</title>
+    <title>红妆双美整形与美容宝典</title>
     <!-- favicon.ico -->
     <link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon" />
