--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -11,7 +11,7 @@
     <!-- favicon.ico -->
 <link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
-    <title>{dede:field.title/}_海南红妆双美整形美容资讯</title>
+    <title>{dede:field.title/}_红妆双美整形与美容宝典</title>
     <link rel='stylesheet' id='main-css' href='{dede:global.cfg_csspath/}/xzh/style.css' type='text/css' media='all' />
     <link href='{dede:global.cfg_csspath/}/xzh/artilec.css' rel="stylesheet" type="text/css" media="screen and (min-width: 320px) and (max-width: 768px)" />
     <script src="https://cdn.bootcss.com/jquery/1.8.3/jquery.min.js" ></script>
