--- a/xzh.hzshuangmei.com/templets/shuangmei/list_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_article.htm
@@ -13,7 +13,7 @@
     <!-- favicon.ico -->
 <link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
-    <title>{dede:field.title/}_海南红妆双美整形美容资讯</title>
+    <title>{dede:field.title/}_红妆双美整形与美容宝典</title>
     <link rel='stylesheet' id='main-css' href='{dede:global.cfg_csspath/}/xzh/style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='{dede:global.cfg_csspath/}/xzh/page.css' type='text/css' media='all' />
     <script src="https://cdn.bootcss.com/jquery/1.8.3/jquery.min.js" crossorigin></script>
