--- a/xzh.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index.htm
@@ -46,7 +46,6 @@
                 <!--</footer>-->
                 <!--</article>-->
                 <!--{/dede:sql}-->
-                {dede:list orderby='click' channelid='18'  typeid=6 pagesize='3'  }
                 <article class="excerpt excerpt-c5">
                     <a class="thumbnail" href="[field:arcurl/]" target="_blank">
 					<img src="[field:picname/]" data-src="[field:picname/]" class="thumb">
@@ -80,9 +79,9 @@
             <ul class="pagelist">{dede:pagelist listitem="pre,next,pageno,listsize=2"/}</ul>
         </div>
     </section>
-    {dede:arclist tagid='list_index' pagesize='20' orderby='click'}
+<!--     {dede:arclist tagid='list_index' pagesize='20' orderby='click'}
     <li><a href="[field:arcurl/]">[field:title/]</a></li>
-    {/dede:arclist} {dede:arcpagelist tagid='list_index'/} {dede:include filename="_footer.htm"/}
+    {/dede:arclist} {dede:arcpagelist tagid='list_index'/} {dede:include filename="_footer.htm"/} -->
     <!--<script>-->
     <!--window.TBUI = {-->
     <!--uri             : 'http://demo.themebetter.com/tob/wp-{dede:global.cfg_templets_skin/}/themes/tob',-->
