测试一下数据调用
测试一下数据调用

--- a/xzh.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index.htm
@@ -46,7 +46,7 @@
                 <!--</footer>-->
                 <!--</article>-->
                 <!--{/dede:sql}-->
-                {dede:list channelid='18'  pagesize='10'  }
+                {dede:list channelid='18'  pagesize='10' orderby='id'  }
                 <article class="excerpt excerpt-c5">
                     <a class="thumbnail" href="[field:arcurl/]" target="_blank">
 					<img src="[field:picname/]" data-src="[field:picname/]" class="thumb">
