--- a/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
@@ -32,7 +32,7 @@
                 {dede:list channelid='21'   pagesize='10' orderby='id'  }
                 <article class="excerpt excerpt-c5">
                     <a class="thumbnail" href="[field:arcurl/]" target="_blank">
-                    <img src="[field:picname/]" data-src="[field:picname/]" class="thumb">
+                    <img src="[field:litpic/]" data-src="[field:litpic/]" class="thumb">
                 </a>
                     <h2>
                     <a href="[field:arcurl/]"  target="_blank">[field:title/]</a>
