还原熊掌号图片上传URL
还原熊掌号图片上传URL

--- a/xzh.hzshuangmei.com/houtai/templets/archives_edit.htm
+++ b/xzh.hzshuangmei.com/houtai/templets/archives_edit.htm
@@ -142,8 +142,8 @@ function checkSubmit()
              远程
              </td>
             <td align="center">
-       <!--     <img src="<?php if($arcRow["litpic"]!="") echo $arcRow["litpic"]; else echo "images/pview.gif";?>" width="150" height="100" id="picview" name="picview"> -->
-            <img src="<?php if($arcRow["litpic"]!="") echo str_replace("/uploads","//uploads.hzshuangmei.com",$arcRow["litpic"]); else echo "images/pview.gif";?>" width="150" height="100" id="picview" name="picview">
+           <img src="<?php if($arcRow["litpic"]!="") echo $arcRow["litpic"]; else echo "images/pview.gif";?>" width="150" height="100" id="picview" name="picview">
+           <!--  <img src="<?php if($arcRow["litpic"]!="") echo str_replace("/uploads","//uploads.hzshuangmei.com",$arcRow["litpic"]); else echo "images/pview.gif";?>" width="150" height="100" id="picview" name="picview"> -->
             </td>
           </tr>
         </table></td>
