--- a/xzh.hzshuangmei.com/houtai/templets/article_edit.htm
+++ b/xzh.hzshuangmei.com/houtai/templets/article_edit.htm
@@ -280,8 +280,8 @@ function delAlbPicOld(picfile, pid){
               <input type='checkbox' class='np' name='ddisremote' value='1' />
               远程 </td>
             <td align="center">
-        <!--    <img src="<?php if($arcRow["litpic"]!="") echo $arcRow["litpic"]; else echo "images/pview.gif";?>" width="150" height="100" id="picview" name="picview"> -->
-            <img src="<?php if($arcRow["litpic"]!="") echo str_replace("/uploads","//uploads.hzshuangmei.com",$arcRow["litpic"]); else echo "images/pview.gif";?>" width="150" height="100" id="picview" name="picview">
+           <img src="<?php if($arcRow["litpic"]!="") echo $arcRow["litpic"]; else echo "images/pview.gif";?>" width="150" height="100" id="picview" name="picview">
+           <!--  <img src="<?php if($arcRow["litpic"]!="") echo str_replace("/uploads","//uploads.hzshuangmei.com",$arcRow["litpic"]); else echo "images/pview.gif";?>" width="150" height="100" id="picview" name="picview"> -->
             </td>
           </tr>
         </table></td>
