--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -46,9 +46,9 @@
                 <!--<div class="article-tags"><a href="http://demo.themebetter.com/tob/tag/%e6%89%8b%e6%9c%ba" rel="tag">手机</a><a href="http://demo.themebetter.com/tob/tag/%e8%ae%be%e8%ae%a1" rel="tag">设计</a></div>-->
                 <div class="article-wechats">
                     <div class="article-wechatitem">
-                        <img src="{dede:global.cfg_templets_skin/}/images/WeChatApplet.jpg">
-                        <div class="article-wechatitem-tit">{dede:global.cfg_tit/}</div>
-                        <div class="article-wechatitem-desc">{dede:global.cfg_wechatitem_desc/}</div>
+                        <img src="//img.hzshuangmei.com/pc/WeChatApplet.jpg">
+                        <div class="article-wechatitem-tit">微信小程序：见识多</div>
+                        <div class="article-wechatitem-desc">关注我们，每天分享更多有趣的事儿，有趣有料！</div>
                         <div class="article-wechatitem-users">{dede:global.cfg_wechatitem_user/}人已关注</div>
                     </div>
                 </div>
