博客网站搜索页引入头部
博客网站搜索页引入头部

--- a/xzh.hzshuangmei.com/templets/shuangmei/list_search.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_search.htm
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    {dede:include filename="_header.htm"/} {dede:myad name='topbanner_pc'/}
+{dede:include filename="_head.htm"/}
     <div class="m1">
         <div class="location">
             <i></i><span>当前位置：</span>{dede:field name='position'/}
