--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -43,7 +43,11 @@
                     {dede:field.body/}
                 </article>
                 <div class="article-copyright">未经允许不得转载：{dede:field name='position'/}<a href="{dede:field name='arcurl'/}">{dede:field.title/}</a></div>
-                <!--<div class="article-tags"><a href="http://demo.themebetter.com/tob/tag/%e6%89%8b%e6%9c%ba" rel="tag">手机</a><a href="http://demo.themebetter.com/tob/tag/%e8%ae%be%e8%ae%a1" rel="tag">设计</a></div>-->
+                <div class="article-tags">
+                    <!--{dede:tag sort='new' getall='0'}<a href='[field:link/]'>[field:tag /]</a>{/dede:tag}-->
+                    <!--<a href="http://demo.themebetter.com/tob/tag/%e8%ae%be%e8%ae%a1" rel="tag">设计</a>-->
+                    {dede:field.art_tag/}
+                </div>
                 <div class="article-wechats">
                     <div class="article-wechatitem">
                         <img src="//img.hzshuangmei.com/pc/WeChatApplet.jpg">
@@ -97,7 +101,7 @@
             <div class="widget widget-textasst" style="width: 100%;height: 125px">
                 <!--<a class="style01" href="http://themebetter.com" target="_blank">-->
                 <!--<strong>themebetter</strong>-->
-                <!--<h2>更好的WordPress主题</h2>-->
+                <!--<h2>更好的Worarticle-tagsdPress主题</h2>-->
                 <!--<p>扁平化、简洁风、多功能配置，优秀的电脑、平板、手机支持，响应式布局，不同设备不同展示效果...</p></a>-->
             </div>
             <!--<div class="widget widget-asst">-->
