博客网站ifame适应
博客网站ifame适应

--- a/xzh.hzshuangmei.com/templets/shuangmei/_head.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/_head.htm
@@ -1,3 +1,5 @@
+<!--<script src="//msite.baidu.com/sdk/c.js?appid=这里是你的熊掌ID"></script>-->
+<!--<link rel="canonical" href="https://xzh.hzshuangmei.com"/>-->
 <header class="header">
     <div class="container">
         <h1 class="logo"><a href="https://xzh.hzshuangmei.com" title="LOGO图标"><img src="{dede:global.cfg_imgpath/}/xzh/logo.png"><span>红妆双美整形与美容宝典</span></a></h1>		<div class="sitenav" id="sitenav">
