--- a/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
@@ -49,5 +49,7 @@
         </div>
     </section>
     <script type='text/javascript' src='{dede:global.cfg_jspath/}/xzh/main.js'></script>
+<script src="{dede:global.cfg_jspath/}/xzh/cambrian_Tail.js"></script>
 </body>
+<script src="{dede:global.cfg_jspath/}/xzh/cambrian_Head.js"></script>
 </html>
