--- a/xzh.hzshuangmei.com/templets/shuangmei/list_search.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_search.htm
@@ -21,6 +21,7 @@
 
     <meta name="description" content="{dede:field.description  function='html2text(@me)'/}">
     <!--[if lt IE 9]><script src="{dede:global.cfg_jspath/}/xzh/html5.js"></script><![endif]-->
+
 </head>
 
 <body>
@@ -65,7 +66,8 @@
         </div>
     </div>
 {dede:include filename="_footer.htm"/}
+<script src="{dede:global.cfg_jspath/}/xzh/cambrian_Tail.js"></script>
 </body>
-
+<script src="{dede:global.cfg_jspath/}/xzh/cambrian_Head.js"></script>
 </html>
 
