--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -33,7 +33,7 @@
                         <span class="item item-1">{dede:field.pubdate function="MyDate('Y-m-d H:i',@me)"/}</span>
                         <span class="item item-6"></span>
                         <span class="item item-2">作者：{dede:field.writer/}</span>
-                        <!--<span class="item item-3">分类：<a href="http://demo.themebetter.com/tob/tech/er1" rel="category tag">二级分类1</a> / <a href="http://demo.themebetter.com/tob/tech" rel="category tag">科技</a></span>-->
+                        <span class="item item-3">分类：<a href="{dede:type row=1}[field:typelink /]{/dede:type}" rel="category tag">{dede:field.typename/}</a></span>
                         <span class="item item-4">阅读({dede:field.click /} )</span>
                         <span class="item item-5"></span>
                     </div>
@@ -136,6 +136,18 @@
         <span class="rewards-popover-close" etap="rewards-close"><i class="fa">&#xe606;</i></span>
     </div>
         <script type='text/javascript' src='{dede:global.cfg_jspath/}/xzh/main.js'></script>
-
+        <!--<script type="application/ld+json">-->
+        <!--{-->
+            <!--"@context": "https://ziyuan.baidu.com/contexts/cambrian.jsonld",-->
+            <!--"@id": "https://xzh.hzshuangmei.com{dede:field.arcurl/}",-->
+            <!--"appid": "{dede:global.cfg_xzh_id/}",-->
+            <!--"title": "{dede:field.title/}",-->
+            <!--"images": [-->
+                <!--"https://xzh.hzshuangmei.com{dede:field.litpic/}"-->
+                <!--],-->
+            <!--"description": "{dede:field.description/}",-->
+            <!--"pubDate": "{dede:field.pubdate function="MyDate('Y-m-d',@me)"/}T{dede:field.pubdate function="MyDate('H:i:s',@me)"/}"-->
+        <!--}-->
+     <!--</script>-->
 </body>
 </html>
