博客网站搜索页
博客网站搜索页

--- a/xzh.hzshuangmei.com/templets/shuangmei/list_search.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_search.htm
@@ -33,19 +33,19 @@
         <div class="line"></div>
         <div class="news_content">
             <div id="bdcs-frame-box"></div>
-            <script type="text/javascript">
-            var bdcsFrameSid = "5257607230163915007";
-            var bdcsFrameCharset = "utf-8";
-            var bdcsFrameWidth = 552 ; //宽度请自行调整
-            var bdcsFrameHeight = 0;
-            var bdcsFrameWt = 1;
-            var bdcsFrameHt = 1;  //隐藏搜索框
-            var bdcsFrameResultNum =1;
-            var bdcsFrameBgColor = "#fff";
-            var bdcsRecommend = 0;
-            var bdcsDefaultQuery = 0;
-            var bdcsRemoveUrl = 0;
-            </script>
+            <!--<script type="text/javascript">-->
+            <!--var bdcsFrameSid = "5257607230163915007";-->
+            <!--var bdcsFrameCharset = "utf-8";-->
+            <!--var bdcsFrameWidth = 552 ; //宽度请自行调整-->
+            <!--var bdcsFrameHeight = 0;-->
+            <!--var bdcsFrameWt = 1;-->
+            <!--var bdcsFrameHt = 1;  //隐藏搜索框-->
+            <!--var bdcsFrameResultNum =1;-->
+            <!--var bdcsFrameBgColor = "#fff";-->
+            <!--var bdcsRecommend = 0;-->
+            <!--var bdcsDefaultQuery = 0;-->
+            <!--var bdcsRemoveUrl = 0;-->
+            <!--</script>-->
             <!-- 按照实际情况修改下面js地址 -->
             <script type="text/javascript" src="https://xzh.hzshuangmei.com/baidusearch.js"></script>
             <script>
@@ -64,7 +64,7 @@
             </script>
         </div>
     </div>
-{dede:include filename="_footer.htm"/}
+<!--{dede:include filename="_footer.htm"/}-->
 <script src="{dede:global.cfg_jspath/}/xzh/cambrian_Tail.js"></script>
 </body>
 <script src="{dede:global.cfg_jspath/}/xzh/cambrian_Head.js"></script>
